--- a/teacher/index.html
+++ b/teacher/index.html
@@ -347,10 +347,9 @@ function loadAnswers() {
         let studentAnswer = answers[ansKey] || "";
 
         studentAnswer = studentAnswer.toString().trim().toUpperCase();
-        if (!["A", "B", "C", "D"].includes(studentAnswer)) {
-          studentAnswer = "Không chọn";
-        }
-
+       if (studentAnswer !== "A" && studentAnswer !== "B" && studentAnswer !== "C" && studentAnswer !== "D") {
+         studentAnswer = "Không chọn";
+         }
         const correctAnswer = correctAnswers[ansKey];
         const score = (studentAnswer === correctAnswer) ? 3 : 0;
 
