--- a/teacher/index.html
+++ b/teacher/index.html
@@ -345,9 +345,10 @@ function loadAnswers() {
 
         studentAnswer = studentAnswer.toString().trim().toUpperCase();
       if (studentAnswer !== "A" && studentAnswer !== "B" && studentAnswer !== "C" && studentAnswer !== "D") {
-  studentAnswer = "Không chọn";
-} else {
-  console.log("Phương án học sinh chọn:", studentAnswer);
+          studentAnswer = "Không chọn";
+      }  else {
+        studentAnswe = studentAnswe
+      }
 }
 
         const correctAnswer = correctAnswers[ansKey];
